Version 1.51:
	- Added a caching layer for reading in the matrix, to reduce the
		amount of disk IO required by an MPI grid (thanks Greg Childers)
	- Changed the main API to allow free-text strings for configuring NFS
	- Fixed a potential 32-bit overflow in the hashtable code, that could
		occur for extremely large problems (thanks Paul Zimmermann)
	- Fixed a line sieve initialization problem (thanks Ilya Popovyan)


Version 1.50: 2/3/12
	- NFS polynomial selection changes:
		- Added a massive overhaul of the stage 1 GPU code by Jayson
		  King, making it both much simpler and much faster
		- Added a second size optimization pass when searching for
		  degree 6 polynomials. This makes stage 2 much more
		  reliable for very large problems
		- Fixed a bug translating the degree 6 root sieve to
		  degree 5
		- Fixed a long-standing problem initializing the root
		  sieve so that it will correctly detect roots modulo
		  small prime powers
		- Patches from Jayson King: use a custom hashtable structure
		  to greatly speed up the stage 1 CPU code
		- Patches from Jayson King: use a sieve to find larger 
		  leading algebraic coefficients
		- Patch from Jayson King: allow stage 2 to be interrupted
		  with Ctrl-C
	- Modified the NFS code to remove almost all dependencies on mp_t
		functions, using GMP instead
	- Patch from Ilya Popovyan: make all MPI processes contribute to
		a single vector-vector operation in the liner algebra,
		instead of just the MPI processes in a single grid row.
		This makes the entire Lanczos iteration up to 20% faster
		for very large problems and grid sizes
	- Patch from Brian Gladman: add ZLIB code to windows build
	- Patches from Brian Gladman: lots of changes to the Visual Studio
		projects; only MSVC10 is supported now
	- Patch from Jayson King: fix longstanding problems that would
		crop up rarely in tinyQS code


Version 1.49: 6/16/11
	- Generalized the degree 6 root sieve to also handle degree