@@ -1,7 +1,9 @@
 Version 1.51:
 	- Added a caching layer for reading in the matrix, to reduce the
 		amount of disk IO required by an MPI grid (thanks Greg Childers)
-	- Changed the main API to allow free-text strings for configuring NFS
+	- Changed the main API to allow free-text strings for configuring NFS,
+		then allowed all the parameters for polynomial selection to be
+		specified when calling the library
 	- Fixed a potential 32-bit overflow in the hashtable code, that could
 		occur for extremely large problems (thanks Paul Zimmermann)
 	- Fixed a line sieve initialization problem (thanks Ilya Popovyan)
